external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_fun_type_fail.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/spec_parsing_fun_type_fail.move:2:26
  │
2 │     fun fun_type_in_prog(p: |u64|u64) {
  │                          ^ Unused parameter 'p'. Consider removing or prefixing with an underscore: '_p'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E00002]: DEPRECATED. unexpected spec item
  ┌─ tests/move_check/parser/spec_parsing_fun_type_fail.move:2:29
  │
2 │     fun fun_type_in_prog(p: |u64|u64) {
  │                             ^^^^^^^^ Specification blocks are deprecated

